@@ -3,8 +3,6 @@ package org.cbioportal.service.util;
 import org.cbioportal.model.ClinicalAttribute;
 import org.cbioportal.model.ClinicalDataCount;
 import org.cbioportal.model.ClinicalDataCountItem;
-import org.cbioportal.model.Sample;
-
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -12,19 +10,21 @@ import java.util.stream.Collectors;
 
 public class StudyViewColumnarServiceUtil {
     
+    private StudyViewColumnarServiceUtil() {}
+    
     public static List<ClinicalDataCountItem> mergeClinicalDataCounts(
         List<ClinicalDataCountItem> items
     ) {
         items.forEach(attr -> {
             Map<String, List<ClinicalDataCount>> countsPerType = attr.getCounts().stream()
                 .collect(Collectors.groupingBy(ClinicalDataCount::getValue));
-            List<ClinicalDataCount> res = countsPerType.entrySet().stream().map((entry) -> {
+            List<ClinicalDataCount> res = countsPerType.entrySet().stream().map(entry -> {
                 ClinicalDataCount mergedCount = new ClinicalDataCount();
                 mergedCount.setAttributeId(attr.getAttributeId());
                 mergedCount.setValue(entry.getKey());
                 mergedCount.setCount(entry.getValue().stream().mapToInt(ClinicalDataCount::getCount).sum());
                 return mergedCount;
-            }).collect(Collectors.toList());
+            }).toList();
             attr.setCounts(res);
         });
         return items;
@@ -42,7 +42,7 @@ public class StudyViewColumnarServiceUtil {
         List<ClinicalDataCountItem> result = new ArrayList<>(counts);
         
         attributes.forEach(attr -> {
-            Integer count = attr.getPatientAttribute() ? filteredPatientCount : filteredSampleCount;
+            Integer count = attr.getPatientAttribute().booleanValue() ? filteredPatientCount : filteredSampleCount;
 
             if (!map.containsKey(attr.getAttrId())) {
                 ClinicalDataCountItem newItem = new ClinicalDataCountItem();
